--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "deploy:apply": "cd cicd/terraform && terraform apply -auto-approve"
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
