Finalized most of the EC2 config. Have a working setup .. added typescript as dev dep to buildserver

--- a/cicd/buildserver/package.json
+++ b/cicd/buildserver/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.10"
+    "@types/node": "^20.4.10",
+    "typescript": "^5.2.2"
   }
 }
