Added npx command for remote server

--- a/cicd/buildserver/package.json
+++ b/cicd/buildserver/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "dist/server.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && nodemon dist/server.js"
+    "start": "npx tsc && nodemon dist/server.js"
   },
   "author": "",
   "license": "ISC",
