still testing remote calls

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
-    "deploy:apply": "gatsby build && cd cicd/terraform && terraform apply -auto-approve"
+    "deploy:apply": "gatsby build && cd cicd/terraform && terraform apply -auto-approve",
+    "remote:echo": "echo 'Hello, world!' >> ~/hello.txt"
   },
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
